--- a/.github/workflows/rubocop-analysis.yml
+++ b/.github/workflows/rubocop-analysis.yml
@@ -3,10 +3,10 @@ name: "Rubocop"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ develop ]
   schedule:
     - cron: '42 4 * * 6'
 
